# mqtt

./: .gitignore  .pre-commit-config.yaml
AppMain/inc/: main.h
AppMain/src/: main.cpp
Chip/STM32F439ZITx/: CMakeLists.txt  STM32F439ZITX_FLASH.ld  STM32F439ZITx.ioc
Chip/STM32F439ZITx/Core/Inc/: stm32f4xx_it.h
Chip/STM32F439ZITx/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
Cmake/Utils/: vscode-config.cmake
Lib/: CMakeLists.txt
Lib/Ethernet/: CMakeLists.txt
Lib/Ethernet/AppEthernet/: AppEthernet.cpp  AppEthernet.h
Lib/Ethernet/AppLWIP/: lwip.c
Lib/Ethernet/OptsLWIP/: lwipopts.h
Lib/FreeRTOS/: CMakeLists.txt
